overlapping circles solved

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,27 +1,17 @@
+
+.circle{
+    transition: all ;
+   animation: scale 0.3s ease-in-out 1;
+}
+@keyframes scale {
+    from{
+        transform: translate(-50%, -50%) scale(0);
+    }
+    to{
+        transform: translate(-50%,-50%) scale(1);
+    }
+}
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-}
-
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
-}
